Bye bye Cambodia

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ theme = "sloth"
 baseurl = "https://www.somewhereonearth.xyz"
 languageCode = "en-us"
 title = "Somewhere on Earth"
+pluralizelisttitles = false
 [Params]
     Author = "Pierre Lespingal"
     disqusShortname = "Pierre"
